--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,12 @@
 xcuserdata/
 xcshareddata/
 .metadata/
-*.xcworkspacedataß
+*.xcworkspacedata
+*.xcworkspace
+
+# CocoaPod
+Pods/*
+Podfile.lock
 
 # MacOS
 .DS_Store
@@ -182,5 +187,3 @@ iOSInjectionProject/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-
